--- a/App/Views/User/register.html
+++ b/App/Views/User/register.html
@@ -29,9 +29,8 @@
             <div class="form-group">
                 <input type="file" name="picture" required>
             </div>
-            <button type="submit">Submit</button>
+            <button type="submit">Register</button>
         </form>
-        <p>New to the hackathon? <a href="#">link</a></p>
     </div>
 
 {% endblock %}
