--- a/App/Views/User/login.html
+++ b/App/Views/User/login.html
@@ -6,18 +6,21 @@
 
     <div class="main">
         <h1 class="text-center">Hackaton</h1>
+        {% if error %}
+            <p>{{ error }}</p>
+        {% endif %}
         <form action="login_post" method="post">
             <div class="row">
                 <div class="col">
-                    <input type="text" name="login" placeholder="Username">
+                    <input type="text" name="login" placeholder="Username" value="{% if form.login %}{{ form.login }}{% endif %}" required>
                 </div>
                 <div class="col">
-                    <input type="password" name="password" placeholder="password">
+                    <input type="password" name="password" placeholder="password" required>
                 </div>
             </div>
-            <button type="submit">Submit</button>
+            <button type="submit">Login</button>
         </form>
-        <p>New to the hackathon? <a href="#">link</a></p>
+        <p>New to the hackathon? <a href="/register">link</a></p>
     </div>
 
 {% endblock %}
