--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -28,6 +28,19 @@
                 </div>
             </div>
         </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    News
+                </div>
+                <div class="card-body">
+                    <div class="rss">
+                        <h3 class="rss__title">{{ rss.name }}</h3>
+                        <p class="rss__intro">{{ rss.intro }}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
