--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -41,6 +41,19 @@
                 </div>
             </div>
         </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Sport
+                </div>
+                <div class="card-body">
+                    <div class="rss">
+                        <h3 class="rss__title">Sport headline</h3>
+                        <p class="rss__intro">The team <b>{{ football.command }}</b> have the biggest number of shots on target - <b>{{ football.shots }}</b></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
