--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -35,7 +35,9 @@
                 </div>
                 <div class="card-body">
                     <div class="rss">
-                        <h3 class="rss__title">{{ rss.name }}</h3>
+                        <h3 class="rss__title">
+                            <a href="news/0">{{ rss.name }}</a>
+                        </h3>
                         <p class="rss__intro">{{ rss.intro }}</p>
                     </div>
                 </div>
