--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -109,6 +109,16 @@
                 </div>
             </div>
         </div>
+        <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Clothes
+                </div>
+                <div class="card-body">
+                    <div class="clothes_card" id="chart"></div>
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
