--- a/App/Views/News/news.html
+++ b/App/Views/News/news.html
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="news">
-        <h1 class="text-center">News</h1>
+        <h1 class="main__title">News</h1>
         {% if rss.image %}
             <img src="{{ rss.image }}" alt="{{ rss.intro }}">
         {% endif %}
