--- a/App/Views/Photos/photos.html
+++ b/App/Views/Photos/photos.html
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="photos">
-        <h1 class="text-center">Photos</h1>
+        <h1 class="main__title">Photos</h1>
         <form action="photos_post" method="post" enctype="multipart/form-data">
             <div class="row">
                 <div class="col-sm-4 col-xs-2">
