--- a/App/Views/Sport/sport.html
+++ b/App/Views/Sport/sport.html
@@ -5,10 +5,14 @@
 {% block body %}
 
     <div class="sport">
-        <h1 class="text-center">Sport</h1>
-        <form action="login_post" method="post">
-            <input type="text" name="command" class="sport__input">
-        </form>
+        <h1 class="main__title">Sport</h1>
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <form action="login_post" method="post">
+                    <input type="text" name="command" class="sport__input">
+                </form>
+            </div>
+        </div>
         <ul class="sport__list" id="loser_commands"></ul>
     </div>
 
