--- a/App/Views/User/login.html
+++ b/App/Views/User/login.html
@@ -4,23 +4,23 @@
 
 {% block body %}
 
-    <div class="main">
-        <h1 class="text-center">Hackaton</h1>
+    <div class="login">
+        <h1 class="main__title">Hackaton</h1>
         {% if error %}
             <p>{{ error }}</p>
         {% endif %}
         <form action="login_post" method="post">
             <div class="row">
                 <div class="col">
-                    <input type="text" name="login" placeholder="Username" value="{% if form.login %}{{ form.login }}{% endif %}" required>
+                    <input type="text" name="login" class="login__input" placeholder="Username" value="{% if form.login %}{{ form.login }}{% endif %}" required>
                 </div>
-                <div class="col">
-                    <input type="password" name="password" placeholder="password" required>
+                <div class="col offset-2">
+                    <input type="password" name="password" class="login__input" placeholder="password" required>
                 </div>
             </div>
-            <button type="submit">Login</button>
+            <button type="submit" class="login__button">Login</button>
         </form>
-        <p>New to the hackathon? <a href="/register">link</a></p>
+        <p class="login__buttom-text">New to the hackathon? <a href="/register">link</a></p>
     </div>
 
 {% endblock %}
