--- a/App/Views/User/register.html
+++ b/App/Views/User/register.html
@@ -4,32 +4,35 @@
 
 {% block body %}
 
-    <div class="main">
-        <h1 class="text-center">Hackaton</h1>
+    <div class="login">
+        <h1 class="main__title">Hackaton</h1>
         {% if error %}
             <p>{{ error }}</p>
         {% endif %}
         <form action="register_post" method="post" enctype="multipart/form-data">
             <div class="row">
                 <div class="col">
-                    <input type="text" name="login" placeholder="Username" value="{% if form.login %}{{ form.login }}{% endif %}" required>
+                    <input type="text" name="login" placeholder="Username" class="login__input" value="{% if form.login %}{{ form.login }}{% endif %}" required>
                 </div>
-                <div class="col">
-                    <input type="email" name="email" placeholder="Email" value="{% if form.email %}{{ form.email }}{% endif %}" required>
+                <div class="col offset-2">
+                    <input type="email" name="email" placeholder="Email" class="login__input" value="{% if form.email %}{{ form.email }}{% endif %}" required>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <input type="password" name="password" placeholder="Password" required>
+                    <input type="password" name="password" class="login__input" placeholder="Password" required>
                 </div>
-                <div class="col">
-                    <input type="password" name="confirm_password" placeholder="Confirm password" required>
+                <div class="col offset-2">
+                    <input type="password" name="confirm_password" class="login__input" placeholder="Confirm password" required>
                 </div>
             </div>
             <div class="form-group">
-                <input type="file" name="picture" required>
+                <label class="fileContainer">
+                    Add picture
+                    <input type="file" name="picture" required>
+                </label>
             </div>
-            <button type="submit">Register</button>
+            <button type="submit" class="login__button">Register</button>
         </form>
     </div>
 
