--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -8,18 +8,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.21/c3.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 
-
-<div class="site">
-    <div class="container">
-        {% block body %}
-        {% endblock %}
-    </div>
+<div class="container">
+    {% block body %}
+    {% endblock %}
 </div>
 
 <!-- Optional JavaScript -->
@@ -29,6 +26,6 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.21/c3.min.js"></script>
-<script src="assets/js/code.js"></script>
+<script src="/assets/js/code.js"></script>
 </body>
 </html>
